[ios] Fix overscroll stomping on scrollView content offset.

Bug: 844332
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I10b4797e9e189dd03d783642b20352a546a449c2
Reviewed-on: https://chromium-review.googlesource.com/1070515
Commit-Queue: Kurt Horimoto <kkhorimoto@chromium.org>
Reviewed-by: Kurt Horimoto <kkhorimoto@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570933}
Former-commit-id: b4624cd33f24794a1533851e3b689171652ec3ba